--- a/about.html
+++ b/about.html
@@ -4,14 +4,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+
+<link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
 </head>
 <body>
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+    </div>
+
     <!-- ABOUT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <nav>
+        <ul>
+            <li>
+                <a href="./index.html">
+                    Home
+                </a>
+                    <body>
+                    <h1>H-Thai-ML Resturant</h1>
+                    <h2>This is the best resturant to ever exist, all the flavors will burst in your mouth as soon as you have the first try! Come and enjoy with us!</h2>
+                </body>
+            </li>
+            <li>
+                <a href="./menu.html">
+                    Menu
+                </a>
+            </li>
+            <li>
+                <a href="./about.html">
+                    About
+                </a>
+            </li>
+            <li>
+                <a href="./contact.html">
+                    Contact </a>
+            </li>
+        </ul>
+    </nav>
+    <div id="banner">
+    <img alt="Banner logo" src="./assets/images/banner.png">
+   </div>
     <main>
-        <!-- About page code here -->
+    
+<body>
+    <h1>About US</h1>
+    <h2>Locations</h2>
+    <ul>
+        <li>New York City, USA</li>
+        <li>Tokyo, Japan</li>
+        <li>Paris, France</li>
+        <li>Sydney, Australia</li>
+    </ul>
+
+    <h2>Origin Story</h2>
+<img src="assets/images/about.jpg" alt="Origin Story" width="300" height="200">New York City, USA
+<p>Once upon a time, nestled within the bustling streets of New York City, there existed a hidden gem known as "Flavors
+    of Serendipity." The story of this quaint yet extraordinary restaurant began with a passionate chef named Elena.</p>
+
+<p>Elena had a dream that extended far beyond just serving delicious food. Her aspiration was to create a place where
+    flavors from around the world harmoniously danced together, captivating the palates of all who ventured in.</p>
+
+<p>But why New York City, you might ask? Elena believed in the city's heartbeat - its diverse cultures, eclectic tastes,
+    and people from every corner of the globe. It was a melting pot of traditions, a place where each street echoed with
+    a symphony of languages and cuisines.</p>
+
+<p>Amidst the towering skyscrapers and the rhythmic hum of the city, Elena found her canvas. She envisioned a haven
+    where locals and tourists alike could experience an adventure through taste, where the fusion of international
+    culinary delights would evoke feelings of joy, nostalgia, and discovery.</p>
+
+<p>With determination in her heart and an unwavering passion for food, Elena opened "Flavors of Serendipity" in the
+    heart of New York City. Her restaurant became a testament to her belief that food transcends boundaries, connecting
+    people through the universal language of taste.</p>
+
+<p>And so, from that vibrant and diverse corner of the world, "Flavors of Serendipity" welcomed guests to embark on a
+    gastronomic journey unlike any other, where every dish was a testament to the beauty of unity found in diversity.
+</p>
+
+</body>
+</body>
     </main>
 </body>
 </html>
