--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
 </head>
 <body>
-    <!-- CONTACT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <nav>
+        <ul>
+            <li>
+                <a href="./index.html">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="./menu.html">
+                    Menu
+                </a>
+            </li>
+            <li>
+                <a href="./about.html">
+                    About
+                </a>
+            </li>
+            <li>
+                <a href="./contact.html"> 
+                    Contact </a>
+            </li>
+        </ul>
+    </nav> 
+    <img src="assets/images/banner.png" alt="Banner Image" width="300" height="200">
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,8 +41,14 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number:</strong>
+            <p><i class="fas fa-phone"></i>Phone Number: +1-123-456-7890</p>
+            <p><i class="fas fa-envelope"></i>Address: 1234 Main Street, New York, New York, 89123</p>
+            <p><i class="fas fa-map-marker"></i>Customer Service Email: info@restaurant.com</p>
+             <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+                integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
         </p>
     </main>
+    
 </body>
 </html>
