--- a/index.html
+++ b/index.html
@@ -4,15 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H-Thai-ML</title>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
 </head>
 <body>
     <!-- HOME PAGE -->
-    <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="./index.html">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="./menu.html">
+                    Menu
+                </a>
+            </li>
+            <li>
+                <a href="./about.html">
+                    About
+                </a>
+            </li>
+            <li>
+                <a href="./contact.html">
+                    Contact </a>
+            </li>
+        </ul>
+    </nav>
+    <img src="assets/images/table-in-restaurant.jpg" alt="table in restaurant" width="300" height="200">
     <!-- TODO: Banner Image here-->
     <main>
         <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
+        <div class="service">
+            <h3>Dine In</h3>
+        </div>
+        <div class="service">
+            <h3>Take Out</h3>
+        </div>
+        <div class="service">
+            <h3>Delivery</h3>
+        </div>
     </main>
 </body>
 </html>
